# vividroi-backend

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: azure-container-webapp.yml  main_vividroi-backend.yml
app/: main.py
app/chat/: getGroqChat.py
app/configuration/: getConfig.py
app/model/: CampaignAnalysisModel.py  CampaignRequestModel.py  ChatMessageModel.py  MessageModel.py  OutcomeResponseModel.py  PersonaModel.py  PersonaRequestModel.py
app/routers/: chatService.py
